<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:paddingRight="25dp"
    android:paddingLeft="25dp">

    <Button
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:text="@string/btn1"
        android:textColor="@color/TextDark"
        android:background="@color/colorPrimaryLight"
        android:id="@+id/btn1"
        android:layout_marginTop="77dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:onClick="onBtnClicked"/>

    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/btn2"
        android:textColor="@color/TextDark"
        android:background="@color/colorPrimaryLight"
        android:id="@+id/btn2"
        android:layout_marginTop="40dp"
        android:layout_below="@+id/btn1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="onBtnClicked"/>

    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/btn3"
        android:textColor="@color/TextDark"
        android:background="@color/colorPrimaryLight"
        android:id="@+id/btn3"
        android:layout_alignTop="@+id/btn2"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:onClick="onBtnClicked"/>

    <Button
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:text="@string/btn4"
        android:textColor="@color/TextDark"
        android:background="@color/colorPrimaryLight"
        android:id="@+id/btn4"
        android:layout_below="@+id/btn2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:onClick="onBtnClicked"/>

    <Button
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:text="@string/btn5"
        android:textColor="@color/TextDark"
        android:background="@color/colorPrimaryLight"
        android:id="@+id/btn5"
        android:layout_below="@+id/btn4"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:onClick="onBtnClicked"/>

    <Button
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:text="@string/btn6"
        android:textColor="@color/TextDark"
        android:background="@color/colorPrimaryLight"
        android:id="@+id/btn6"
        android:layout_below="@+id/btn5"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:onClick="onBtnClicked"/>

    <Button
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:text="@string/btn7"
        android:textColor="@color/TextLight"
        android:background="@color/colorAccent"
        android:id="@+id/btn7"
        android:layout_below="@+id/btn6"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:onClick="onBtnClicked"/>

</RelativeLayout>
